--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <title>React Todo App!</title>
 </head>
 <body>
-<h1>Hello World!</h1>
-We are using node <script>document.write(process.versions.node)</script>,
-Chrome <script>document.write(process.versions.chrome)</script>,
-and Electron <script>document.write(process.versions.electron)</script>.
+  <div class="container">
+  </div>
+  <script src="./bundle.js"></script>
 </body>
 </html>
