--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>React Todo App!</title>
+  <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
   <div class="container">
