--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>React Todo App!</title>
-  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
   <div class="container">
   </div>
-  <script src="./bundle.js"></script>
+  <script src="../bundle.js"></script>
 </body>
 </html>
